--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,7 +1,7 @@
 @import "_variable.scss";
 @import "_animation.scss";
 div,span{
-  content: "";
+  // content: "";
 }
 h1,h2,h3,p,a{
   color:#606060;
@@ -42,7 +42,7 @@ header{
   .headerwrap{
     width: 90vw;
     height: 90vh;
-    z-index: -1;
+    z-index: 1;
     position: fixed;
     top: 0;bottom: 0;
     left: 0;right: 0;
@@ -78,6 +78,33 @@ header{
       top: 20px;
       width: 50px;
       height: 40px;
+      div:nth-child(1){
+        transition: all 300ms ease 0s;
+      }
+      div:nth-child(2){
+        transition: all 300ms ease 100ms;
+      }
+      div:nth-child(3){
+        transition: all 300ms ease 200ms;
+      }
+      div{
+
+      }
+
+      &:hover{
+        div{
+          transform-origin: right;
+        }
+        div:nth-child(1){
+          transform: scaleX(2);
+        }
+        div:nth-child(2){
+          transform: scaleX(0.7);
+        }
+        div:nth-child(3){
+          transform: scaleX(1.2);
+        }
+      }
     }
     .flex-pos{
       left: -50px;
