--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,5 +1,6 @@
 @import "_variable.scss";
 @import "_animation.scss";
+
 div,span{
   // content: "";
 }
@@ -28,14 +29,14 @@ header{
     justify-content: space-between;
     flex-direction: column;
     div{
-      background: black;
+      background: $black;
       height: 1px;
     }
   }
   [class^="frame-"],
   [class*=" frame-"] {
     position: absolute;
-    background-color: black;
+    background-color: $black;
     content: "";
   }
 
@@ -112,9 +113,11 @@ header{
       margin: auto;
       width: 50px;
       height: 200px;
-      div:nth-child(1){
-        width:100px;
+      div{
+        transition: all 300ms;
+        transform-origin: left;
       }
+
     }
   }
 }
@@ -226,7 +229,9 @@ main{
     }
   }
 }
-
+.double{
+  transform: scaleX(2);
+}
 @keyframes width{
   100%{
     width: 100%;
