--- a/stylesheet/_variable.scss
+++ b/stylesheet/_variable.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $gray: #d6d6d6;
-$black: #303030;
+$black: #454545;
 $twitter: #55acee;
 $instagram: #D93177;
 $youtube: #cd201f;
@@ -48,63 +48,12 @@ $box_all_desktop: 1000px;
 }
 
 @mixin center{
-  position: absolute;
-  top: 0;bottom: 0;
-  left: 0;right: 0;
-  margin: auto;
-}
-
-@mixin grid($columns,$rows,$gap) {
-  $columns_list:length($columns);
-  $rows_list:length($rows);
-  columns_list: $columns_list;
-  rows_list: $rows_list;
-  $contents_num:$columns_list * $rows_list;
-  $grid_num:1;
-  $column_num:1;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: $columns;
-      grid-template-columns: $columns;
-  -ms-grid-rows: $rows;
-      grid-template-rows: $rows;
-  grid-gap: $gap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  display: flex;
   justify-content: center;
-
-  @for $list from 1 through $rows_list{
-    @for $list from 1 through $columns_list{
-      &_#{$grid_num}{
-        @if $column_num == 1{
-          @include IEsupport_margin(top,0px);
-        }@else{
-          @include IEsupport_margin(top,$gap / 2);
-        }
-        @if $column_num == $rows_list{
-          @include IEsupport_margin(bottom,0px);
-        }@else{
-          @include IEsupport_margin(bottom,$gap / 2);
-        }
-        @if $list == 1{
-          @include IEsupport_margin(left,0px);
-        }@else{
-          @include IEsupport_margin(left,$gap / 2);
-        }
-        @if $list == $columns_list{
-          @include IEsupport_margin(right,0px);
-        }@else{
-          @include IEsupport_margin(right,$gap / 2);
-        }
-        -ms-grid-column:$list;
-        -ms-grid-row:$column_num;
-        $grid_num:$grid_num + 1;
-
-      }
-    }
-    $column_num:$column_num + 1;
-  }
+  align-items: center;
 }
+
+
 
 $smartphone: "only screen and (min-width : 320px) and (max-width : 480px)";
 $tablet: "only screen (min-width : 480px) and (max-width : 1024px)";
